[tool.poetry]
name = "pid"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.0.0"
streamlit = "^1.36.0"
jupyter = "^1.0.0"
lab = "^8.2"
plotly = "^5.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
